# fire-emblem-app

./: .gitignore  Main_Page.py  README.md  app.R  app.py  pyproject.toml  serenes_table_downloader.R
data/: hit_rate_pmf_table.csv  hit_rate_table.csv
data/binding-blade/: base-stats.csv  characters.csv  full_data.csv  growth-rates.csv  weapon-ranks.csv
data/duckdb/: db.duckdb
data/engage/: char_growths.csv  class_growths.csv
data/powerbi_exports/: FireEmblemData05202024.xlsx
data/the-sacred-stones/: base-stats.csv  char_growths.csv  full_df.csv  growth-rates.csv  weapon_ranks.csv
data/true_hit_data/: avg_pmf.csv  simulated_hit_rate_table.csv  sum_pmf.csv  uniform_data.csv
markdown_files/: true_hit_explanation.md  true_hit_explanation_pt2.md
notebooks/: RecreatePowerbiModel.ipynb  create_weapon_rank_data.ipynb  example_visualizations.ipynb  fe6-preprocessing.ipynb  web_scraping.ipynb
old_data/engage/: char_growths.csv
old_data/gaiden/: char_growths.csv
old_data/shadow-dragon-and-blade-of-light/: class_growths.csv
pages/: 1_Side_By_Side_Character_Comparison.py  2_Full_Roster_Analysis.py  3_True_Hit_Calculator.py  About.py
src/: true_hit.py
