[tool.poetry]
name = "fire-emblem-app"
version = "0.1.0"
description = ""
authors = ["Brady Lamson <lamsonbrady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"
requests = "^2.31.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
