[tool.poetry]
name = "fire-emblem-app"
version = "0.1.0"
description = ""
authors = ["Brady Lamson <lamsonbrady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"
requests = "^2.31.0"
jupyter = "^1.0.0"
polars = "^0.20.26"
xlsx2csv = "^0.8.2"
duckdb = "^0.10.3"
pyarrow = "^16.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
